# aprscot

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  example-config.ini  mkdocs.yml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: debian.yml  python-publish.yml  python-test.yml
aprscot/: __init__.py  classes.py  cmd.py  commands.py  constants.py  functions.py
debian/: aprscot.conf  aprscot.postinst  aprscot.service
docs/: configuration.md  conop.md  installation.md  troubleshooting.md  usage.md
tests/: test_functions.py
